@@ -27,6 +27,7 @@ to build HTML documentation when installing gems.)
     module.  Bug #163 by Zachary Scott.
   * Fixed ChangeLog parsing for FFI gem.  Bug #165 by Zachary Scott.
   * RDoc now links \#=== methods.  Bug #164 by Zachary Scott.
+  * Allow [] following argument names for TomDoc.  Bug #167 by Ellis Berner.
 
 === 4.0.0.preview2.1 / 2012-12-14
 
